# odoobench

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml  test-build.yml
odoobench/: __init__.py  cli.py  gui_launcher.py  launcher.py  version.py
odoobench/core/: __init__.py  backup_restore.py  executor.py  odoo_config_parser.py
odoobench/db/: connection_manager.py  odoo_connection_manager.py
odoobench/gui/: __init__.py  instance_window.py  main_window.py
odoobench/gui/dialogs/: __init__.py
odoobench/gui/widgets/: __init__.py
odoobench/utils/: __init__.py  config.py
